home section structure

--- a/index.html
+++ b/index.html
@@ -64,7 +64,32 @@
       <main class="main">
          <!--==================== HOME ====================-->
          <section class="home section" id="home">
-            
+            <div class="home__container container grid">
+               <img src="assets/img/home-cactus.png" alt="cactus" class="home__img">
+
+               <div class="home__data">
+                  <h1 class="home__title">
+                     ornamental <br>
+                     <span>plants</span> for <br>
+                     your home <br>
+                  </h1>
+
+                  <p class="home__descr">
+                     We design ornamental plants for your home in-house for and original style and quality you won't find anywhere else.
+                  </p>
+
+                  <div class="home__buttons">
+                     <a href="#" class="button">
+                        <span>
+                           <i class="ri-arrow-right-line"></i>
+                        </span>
+                        go to shop
+                     </a>
+
+                     <a href="#" class="button__link">more details</a>
+                  </div>
+               </div>
+            </div>
          </section>
 
          <!--==================== NEWS ====================-->
