--- a/index.html
+++ b/index.html
@@ -126,7 +126,79 @@
 
          <!--==================== SHOP ====================-->
          <section class="shop section" id="shop">
-            
+            <h2 class="section__title">
+               the best plants
+            </h2>
+
+            <div class="shop__container container grid">
+
+               <article class="shop__card">
+                  <img src="assets/img/shop-cactus-1.png" alt="cactus" class="shop__img">
+
+                  <h3 class="shop__title">Gymnocalycium <br> Cactus</h3>
+                  <span class="shop__price">$15</span>
+
+                  <button class="shop__btn">
+                     <i class="ri-shopping-bag-line"></i>
+                  </button>
+               </article>
+               
+               <article class="shop__card">
+                  <img src="assets/img/shop-cactus-2.png" alt="cactus" class="shop__img">
+
+                  <h3 class="shop__title">Echeveria <br> Succulent</h3>
+                  <span class="shop__price">$10</span>
+
+                  <button class="shop__btn">
+                     <i class="ri-shopping-bag-line"></i>
+                  </button>
+               </article>
+
+               <article class="shop__card">
+                  <img src="assets/img/shop-cactus-3.png" alt="cactus" class="shop__img">
+
+                  <h3 class="shop__title">Ferocactus <br> Cactus</h3>
+                  <span class="shop__price">$15</span>
+
+                  <button class="shop__btn">
+                     <i class="ri-shopping-bag-line"></i>
+                  </button>
+               </article>
+
+               <article class="shop__card">
+                  <img src="assets/img/shop-cactus-4.png" alt="cactus" class="shop__img">
+
+                  <h3 class="shop__title">Key Lime Pie <br> Succulent</h3>
+                  <span class="shop__price">$12</span>
+
+                  <button class="shop__btn">
+                     <i class="ri-shopping-bag-line"></i>
+                  </button>
+               </article>
+
+               <article class="shop__card">
+                  <img src="assets/img/shop-cactus-5.png" alt="cactus" class="shop__img">
+
+                  <h3 class="shop__title">Melocactus <br> Cactus</h3>
+                  <span class="shop__price">$20</span>
+
+                  <button class="shop__btn">
+                     <i class="ri-shopping-bag-line"></i>
+                  </button>
+               </article>
+
+               <article class="shop__card">
+                  <img src="assets/img/new-cactus-2.png" alt="cactus" class="shop__img">
+
+                  <h3 class="shop__title">Lily Pad <br> Succulent</h3>
+                  <span class="shop__price">$25</span>
+
+                  <button class="shop__btn">
+                     <i class="ri-shopping-bag-line"></i>
+                  </button>
+               </article>
+
+            </div>
          </section>
 
          <!--==================== CARE ====================-->
