--- a/index.html
+++ b/index.html
@@ -251,7 +251,52 @@
 
          <!--==================== CONTACT ====================-->
          <section class="contact section" id="contact">
-            
+            <h2 class="section__title">
+               you want a cactus <br> contact us
+            </h2>
+
+            <div class="contanct__container container grid">
+               <img src="assets/img/contact-cactus.png" alt="cactus" class="contact__img">
+
+               <div class="contact__content">
+                  <div>
+                     <h3 class="contact__title">Write to us</h3>
+
+                     <div class="contact__social">
+                        <a href="https://web.whatsapp.com/" target="_blank">
+                           <i class="ri-whatsapp-fill"></i>
+                        </a>
+
+                        <a href="tel:+79032146981" target="_blank">
+                           <i class="ri-message-2-fill"></i>
+                        </a>
+
+                        <a href="mailto:kiryakov.g.m@gmail.com" target="_blank">
+                           <i class="ri-mail-fill"></i>
+                        </a>
+
+                     </div>
+                  </div>
+
+                  <div>
+                     <h3 class="contact__title">Call us at the numbers</h3>
+
+                     <address class="contact__info">
+                        +00-987-7654-342 <br>
+                        +12-06660
+                     </address>
+                  </div>
+
+                  <div>
+                     <h3 class="contact__title">Find us here</h3>
+
+                     <address class="contact__info">
+                        Lima - Sun City - Peru <br>
+                        Av. Moon #4527
+                     </address>
+                  </div>
+               </div>
+            </div>
          </section>
       </main>
 
