styles breakpoints for large devices

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                you want a cactus <br> contact us
             </h2>
 
-            <div class="contanct__container container grid">
+            <div class="contact__container container grid">
                <img src="assets/img/contact-cactus.png" alt="cactus" class="contact__img">
 
                <div class="contact__content">
